Started Support for JSR-330 style Inject annotations
Changed test frame work to JUnit 4.x